Section Add Students, Add Instructors, Add Managers, and Main page filtering by authorization info

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,3 +1,8 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+.modal-body .select-list {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+}
