--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -3,6 +3,7 @@
   <h1>CleanNote</h1>
 </div>
 <h2>- Sections -</h2>
+<a href="#/home">All</a>
 <div ng-repeat="section in sections">
   <span ng-show="section.selected" class="glyphicon glyphicon-ok"></span>
   <a href="#/home?sectionId={{section._id}}">{{section.course_id}}{{section.section_id}} -  {{section.course_name}}</a>
