Revert "update html"
This reverts commit c2cdcaca85ce731a50bf06599cb859b7db6b9c12.

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,8 +1,6 @@
 <!-- <script type="text/ng-template" id="/home.html"> -->
-<div class="row">
-<div class="col-md-9">
 <div class="page-header">
-  <h1 style="margin-top:60px;">WelCome</h1>
+  <h1>CleanNote</h1>
 </div>
 <h2>- Sections -</h2>
 <div ng-repeat="section in sections">
@@ -32,18 +30,12 @@
 <hr>
 <h2> - Cards - </h2>
 <div ng-repeat="card in cards" style="margin-top:20px;">
-  <div class = "panel panel-info">
-   <div class = "panel-heading">
-    <h3>
-     {{card.title}}
-    </h3>
-   </div>
-   <div class = "panel-body">
-   <p>
+  <h3>
+    {{card.title}}
+  </h3>
+  <p>
     {{card.content}}
-   </p>
-  </div>
- </div>
+  </p>
   <span>
     <a href="#/cards/{{card._id}}">Comments</a>
   </span>
@@ -68,9 +60,6 @@
   <button type="submit" class="btn btn-primary">Add</button>
 </form>
 <hr>
-</div>
-<div class="col-md-3">
-<div class="alert alert-info" style = "top: 100px; position: fixed;">
 <h2>- Todo -</h2>
 <div ng-repeat="todo in todos | orderBy:'done'" style="margin-top:20px;">
   <h4>
@@ -86,7 +75,4 @@
   </div>
   <button type="submit" class="btn btn-primary">Add</button>
 </form>
-</div>
-</div>
-</div>
 <!-- </script> -->
