edit.ver html file
html 배치 수정했습니다. 추가적으로 section이랑 card modal로 추가하도록 변경했습니다만 아직 수정 필요할듯합니다.

--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,5 +1,6 @@
 <!-- <script type="text/ng-template" id="/register.html"> -->
-<div class="page-header">
+<div class="col-md-6 col-md-offset-3">
+<div class="page-header" style="margin-top:60px;">
   <h1>CleanNote</h1>
 </div>
 <div ng-show="error" class="alert alert-danger row">
@@ -19,4 +20,5 @@
   </div>
   <button type="submit" class="btn btn-primary">Register</button>
 </form>
+</div>
 <!-- </script> -->
