--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,18 +1,24 @@
 <!-- <script type="text/ng-template" id="/login.html"> -->
+<div class="row">
+<div class="col-md-3 col-md-offset-3">
 <div class="page-header">
-  <h1>CleanNote</h1>
+  <h1 style="margin-top:200px;">CleanNote</h1>
 </div>
 <div ng-show="error" class="alert alert-danger row">
   <span>{{ error.message }}</span>
 </div>
-<form ng-submit="logIn()" style="margin-top:30px;">
+</div>
+<div class="col-md-3">
+<form ng-submit="logIn()" style="margin-top:200px;">
   <h3>Log In</h3>
   <div class="form-group">
     <input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
   </div>
   <div class="form-group">
     <input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
-  </div> 
+  </div>
   <button type="submit" class="btn btn-primary">Log In</button>
 </form>
+</div>
+</div>
 <!-- </script> -->
