--- a/client/partials/sections.html
+++ b/client/partials/sections.html
@@ -1,5 +1,6 @@
 <!-- <script type="text/ng-template" id="/sections.html"> -->
-<div class="page-header">
+<div class="col-md-6 col-md-offset-3">
+<div class="page-header" style="margin-top:60px;">
   <h1>{{ section.course_id }}{{ section.section_id }} - {{ section.course_name }}</h1>
   <h2>- Students -</h2>
   <div ng-repeat="student in manager.students">
@@ -13,5 +14,6 @@
   <div ng-repeat="manager in section.managers">
     {{ manager.user_id }} {{ manager.username }}
   </div>
+</div>
 </div>
 <!-- </script> -->
