--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,136 +1,124 @@
 <!-- <script type="text/ng-template" id="/home.html"> -->
 <div class="row">
-<div class="col-md-2 col-md-offset-1">
-<h2>- Sections -</h2>
-<a href="#/home">All</a>
-<div class="btn-group-vertical">
-<div ng-repeat="section in sections">
-  <button type= "button" class = "btn btn-primary">
-  <span ng-show="section.selected" class="glyphicon glyphicon-ok"></span>
-  <a href="#/home?sectionId={{section._id}}" style="color:white;">{{section.course_id}}{{section.section_id}} -  {{section.course_name}}</a>
-  <a href="#/sections/{{section._id}}" ng-show="section.manage_authorized" class="glyphicon glyphicon-pencil"></a>
-             </button>
+  <div class="col-md-2 col-md-offset-1">
+    <div class="btn-group-vertical">
+      <div class="section">
+	<a href="#/home">All</a>
       </div>
-</div>
-<form ng-submit="addSection()" style="margin-top:30px;">
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#sectionModal">+</button>
-<div class="modal fade" id="sectionModal" role="dialog">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Add a new Section</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-    <input type="text" class="form-control" placeholder="Course Id" ng-model="course_id"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Section Id" ng-model="section_id"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Semester" ng-model="semester"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Year" ng-model="year"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Course Name" ng-model="course_name"></input>
-  </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Add</button data-dismiss="modal">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+      <div class="section" ng-repeat="section in sections">
+	<span ng-show="section.selected" class="glyphicon glyphicon-ok"></span>
+	<a href="#/home?sectionId={{section._id}}">{{section.course_id}}{{section.section_id}} -  {{section.course_name}}</a>
+	<a href="#/sections/{{section._id}}" ng-show="section.manage_authorized" class="glyphicon glyphicon-pencil"></a>
       </div>
     </div>
-</form>
-</div>
-</div>
-<div class="col-md-6">
-<div class="page-header">
-  <h1 style="margin-top:60px;">WelCome</h1>
-</div>
-<hr>
-<h2> - Cards - </h2>
-<div ng-repeat="card in cards" style="margin-top:20px;">
-  <div class = "panel panel-info">
-   <div class = "panel-heading">
-    <h3>
-     {{card.title}}
-    </h3>
-   </div>
-   <div class = "panel-body">
-   <p>
-    {{card.content}}
-<<<<<<< HEAD
-    <span>
-      | <a href="#/cards/{{card._id}}"> more > </a>
-    </span>
-  </p>
-=======
-   </p>
-  </div>
- </div>
-  <span>
-    <a href="#/cards/{{card._id}}">Comments</a>
-  </span>
->>>>>>> 0489d648e0b05a4512b3b633d5156c65c67d830e
-</div>
-<form ng-submit="addCards()" style="margin-top:30px;">
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cardModal">+</button>
-  <div class="modal fade" id="cardModal" role="dialog">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Add a new card</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-    <label for="typeSelect">Type : </label><br>
-    <select class="form-control" name="typeSelect" ng-model="card_type">
-      <option value="announcement">announcement</option>
-      <option value="assignment">assignment</option>
-      <option value="grade">grade</option>
-      <option value="discussion">discussion</option>
-    </select><br>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Card Title" ng-model="card_title"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Card Content" ng-model="card_content"></input>
-  </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Add</button>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
+    <form ng-submit="addSection()" style="margin-top:30px;">
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#sectionModal">+</button>
+      <div class="modal fade" id="sectionModal" role="dialog">
+	<div class="modal-dialog modal-sm">
+	  <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Add a new Section</h4>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+		<input type="text" class="form-control" placeholder="Course Id" ng-model="course_id"></input>
+	      </div>
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Section Id" ng-model="section_id"></input>
+	      </div>
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Semester" ng-model="semester"></input>
+	      </div>
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Year" ng-model="year"></input>
+	      </div>
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Course Name" ng-model="course_name"></input>
+	      </div>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">Add</button data-dismiss="modal">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+	  </div>
+	</div>
+    </form>
     </div>
   </div>
-</form>
-<hr>
-</div>
-<div class="col-md-2">
-<div class="alert alert-info" style = "top: 100px; position: fixed;">
-<h2>- Todo -</h2>
-<div ng-repeat="todo in todos | orderBy:'done'" style="margin-top:20px;">
-  <h4>
-    <span ng-hide="todo.done" class="glyphicon glyphicon-unchecked" ng-click="finishTask(todo)"></span>
-    <span ng-show="todo.done" class="glyphicon glyphicon-ok" ng-click="undoTask(todo)"></span>
-    {{ todo.task }}
-  </h4>
-</div>
-<form ng-submit="addTodo()" style="margin-top:30px;">
-  <h3>Add a new Todo</h3>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Todo" ng-model="todo_task"></input>
+  <div class="col-md-6">
+    <h2> - Cards - </h2>
+    <div ng-repeat="card in cards" style="margin-top:20px;">
+      <div class = "panel panel-info">
+	<div class = "panel-heading">
+	  <h3>
+	    {{card.title}}
+	  </h3>
+	</div>
+	<div class = "panel-body">
+	  <p>
+	    {{card.content}}
+	  </p>
+	</div>
+      </div>
+      <span>
+	<a href="#/cards/{{card._id}}">Comments</a>
+      </span>
+    </div>
+    <form ng-submit="addCards()" style="margin-top:30px;">
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cardModal">+</button>
+      <div class="modal fade" id="cardModal" role="dialog">
+	<div class="modal-dialog modal-lg">
+	  <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Add a new card</h4>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+		<label for="typeSelect">Type : </label><br>
+		<select class="form-control" name="typeSelect" ng-model="card_type">
+		  <option value="announcement">announcement</option>
+		  <option value="assignment">assignment</option>
+		  <option value="grade">grade</option>
+		  <option value="discussion">discussion</option>
+		</select><br>
+	      </div>
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Card Title" ng-model="card_title"></input>
+	      </div>
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Card Content" ng-model="card_content"></input>
+	      </div>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">Add</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+	  </div>
+	</div>
+      </div>
+    </form>
+    <hr>
   </div>
-  <button type="submit" class="btn btn-primary">Add</button>
-</form>
-</div>
-</div>
+  <div class="col-md-2">
+    <div class="alert alert-info" style = "top: 100px; position: fixed;">
+      <h2>- Todo -</h2>
+      <div ng-repeat="todo in todos | orderBy:'done'" style="margin-top:20px;">
+	<h4>
+	  <span ng-hide="todo.done" class="glyphicon glyphicon-unchecked" ng-click="finishTask(todo)"></span>
+	  <span ng-show="todo.done" class="glyphicon glyphicon-ok" ng-click="undoTask(todo)"></span>
+	  {{ todo.task }}
+	</h4>
+      </div>
+      <form ng-submit="addTodo()" style="margin-top:30px;">
+	<h3>Add a new Todo</h3>
+	<div class="form-group">
+	  <input type="text" class="form-control" placeholder="Todo" ng-model="todo_task"></input>
+	</div>
+	<button type="submit" class="btn btn-primary">Add</button>
+      </form>
+    </div>
+  </div>
 </div>
 <!-- </script> -->
