--- a/client/css/main.css
+++ b/client/css/main.css
@@ -37,3 +37,25 @@ body {
 .view-container {
     margin-top:70px;
 }
+
+.bg-grey {
+    background-color: #f6f6f6;
+}
+
+.section a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.section a:hover {
+    text-decoration: none;
+    color: #14ac86 !important;
+}
+
+.section .section-number {
+    font-size: 12px !important;
+}
+
+.section .section-title {
+    font-size: 18px !important;
+}
