Home All Course population and CleanNote Logo Added

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,7 +1,7 @@
 <!-- <script type="text/ng-template" id="/home.html"> -->
 <div class="row">
   <div class="col-md-2 col-md-offset-1">
-    <div class="btn-group-vertical" style="top: 70px; position: fixed;">
+    <div class="btn-group-vertical">
       <form ng-submit="addSection()">
 	<button type="button" class="btn btn-default btn-md" data-toggle="modal" data-target="#sectionModal">+ Create Section</button>
 	<div class="modal fade" id="sectionModal" role="dialog">
