--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,24 +1,22 @@
-<!-- <script type="text/ng-template" id="/login.html"> -->
 <div class="row">
-<div class="col-md-3 col-md-offset-3">
-<div class="page-header">
-  <h1 style="margin-top:200px;">CleanNote</h1>
-</div>
-<div ng-show="error" class="alert alert-danger row">
-  <span>{{ error.message }}</span>
-</div>
-</div>
-<div class="col-md-3">
-<form ng-submit="logIn()" style="margin-top:200px;">
-  <h3>Log In</h3>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
+  <div class="col-md-4 col-md-offset-4">
+    <div class="page-header" style="margin-top:60px;">
+      <h1><img src="images/logo.png" style="width:50px; height:50px; margin-top: -10px; display: inline-block"> CleanNote</h1>
+    </div>
+    <div ng-show="error" class="alert alert-danger row">
+      <span>{{ error.message }}</span>
+    </div>
+  <!-- </div> -->
+  <!-- <div class="col-md-3"> -->
+    <form ng-submit="logIn()">
+      <h3>Log In</h3>
+      <div class="form-group">
+	<input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
+      </div>
+      <div class="form-group">
+	<input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
+      </div>
+      <button type="submit" class="btn btn-block btn-primary pull-right">Log In</button>
+    </form>
   </div>
-  <div class="form-group">
-    <input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
-  </div>
-  <button type="submit" class="btn btn-primary">Log In</button>
-</form>
 </div>
-</div>
-<!-- </script> -->
