--- a/client/partials/cards.html
+++ b/client/partials/cards.html
@@ -1,40 +1,33 @@
-<!-- <script type="text/ng-template" id="/cards.html"> -->
 <div class="row">
-<div class="col-md-6 col-md-offset-3">
-<div class="page-header">
-<div class="panel panel-info" style="margin-top:80px;">
-      <div class="panel-heading">
+  <div class="bg-grey col-md-6 col-md-offset-3">
     <h3>
-     {{card.title}}
+      {{card.title}}
     </h3>
-    </div>
     <div class="panel-body">
-    <p style="font-size:20px; padding=5px;">{{card.content}}</p>
-<div style="background-color:#DDDDDD">
-<form ng-submit="addComment()" style="margin-top:30px; padding: 10px 10px 10px 10px">
-  <div class="form-group">
-  <table style="width:100%">
-  <tr>
-  <td>
-    <input type="text"
-     class="form-control"
-     placeholder="Comment"
-     ng-model="body"></input>
-     </td>
-     <td>
-     <button type="submit" class="btn btn-primary">Post</button>
-     </td>
-     </tr>
-     </table>
+      <p style="font-size:20px; padding=5px;">{{card.content}}</p>
+      <div style="background-color:#DDDDDD">
+	<form ng-submit="addComment()" style="margin-top:30px; padding: 10px 10px 10px 10px">
+	  <div class="form-group">
+	    <table style="width:100%">
+	      <tr>
+		<td>
+		  <input type="text"
+			 class="form-control"
+			 placeholder="Comment"
+			 ng-model="body"></input>
+		</td>
+		<td>
+		  <button type="submit" class="btn btn-primary">Post</button>
+		</td>
+	      </tr>
+	    </table>
+	  </div>
+	  <div ng-repeat="comment in card.comments">
+	    <span style="color:#31708f; font-weight:bold"> {{comment.author}}</span>
+	    <span style="font-family:굴림;font-size:15px; margin-left:10px;">{{comment.body}}</span>
+	  </div>
+	</form>
+      </div>
+    </div>
   </div>
-      <div ng-repeat="comment in card.comments">
-  <span style="color:#31708f; font-weight:bold"> {{comment.author}}</span>
-  <span style="font-family:굴림;font-size:15px; margin-left:10px;">{{comment.body}}</spsan>
 </div>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- </script> -->
