--- a/client/partials/cards.html
+++ b/client/partials/cards.html
@@ -22,7 +22,7 @@
      ng-model="body"></input>
      </td>
      <td>
-     <button type="submit" class="btn btn-primary">Post</button>
+     <button type="submit" class="btn btn-green">Post</button>
      </td>
      </tr>
      </table>
