--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,128 +1,90 @@
-<!-- <script type="text/ng-template" id="/home.html"> -->
 <div class="row">
-<div class="col-md-2 col-md-offset-1">
-<h2>- Sections -</h2>
-<div class="btn-group-vertical">
-<div ng-repeat="section in sections">
-  <button type= "button" class = "btn btn-primary">
-  <span ng-show="section.selected" class="glyphicon glyphicon-ok"></span>
-  <a href="#/home?sectionId={{section._id}}" style="color:white;">{{section.course_id}}{{section.section_id}} -  {{section.course_name}}</a>
-  <a href="#/sections/{{section._id}}" ng-show="section.manage_authorized" class="glyphicon glyphicon-pencil"></a>
-             </button>
+  <div class="col-md-2 col-md-offset-1">
+    <div class="btn-group-vertical">
+      <button type="button" class="btn btn-default btn-md" ng-click="showAddSectionModal()">+ Create Section</button>
+      <hr>
+      <div class="section">
+	<div class="section-tag">
+	  <a href="#/home">
+	    <div class="section-title">ALL Courses</div>
+	  </a>
+	</div>
+	<hr>
       </div>
-</div>
-<form ng-submit="addSection()" style="margin-top:30px;">
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#sectionModal">+</button>
-<div class="modal fade" id="sectionModal" role="dialog">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Add a new Section</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-    <input type="text" class="form-control" placeholder="Course Id" ng-model="course_id"></input>
+      <div class="section" ng-repeat="section in sections">
+
+	<a href="#/home?sectionId={{section._id}}">
+	  <div class="section-number">
+	    {{section.course_id}}{{section.section_id}}
+	  </div>
+	  <div class="section-title">
+	    {{section.course_name}}
+	    <span ng-show="section.selected" class="glyphicon glyphicon-ok pull-right"></span>
+	  </div>
+	</a>
+	<a href="#/sections/{{section._id}}" ng-show="section.manage_authorized">
+	  <span class="glyphicon glyphicon-pencil"></span>edit</a>
+	<hr>
+      </div>
+    </div>
+
   </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Section Id" ng-model="section_id"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Semester" ng-model="semester"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Year" ng-model="year"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Course Name" ng-model="course_name"></input>
-  </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Add</button data-dismiss="modal">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  <div class="bg-grey col-md-6">
+    <div style="padding: 4px;">
+      <h4>TIMELINE<button type="button" class="btn btn-green btn-md pull-right" ng-click="showAddCardModal()">+ Add Card</button></h4>
+    </div>
+    <div class="card" ng-repeat="card in cards" style="margin-top:20px;">
+      <div class="panel panel-normal">
+        <div class="panel-body">
+	  <p>
+	    <div style="font-size: 13px;">
+	      <span style="font-weight: bold;">{{card.creator.username}}</span>
+	      created
+	      <span ng-show="card.card_type == 'announcement'" style="font-weight: bold; color: #245894;">{{card.card_type}}</span>
+        <span ng-show="card.card_type == 'assignment'" style="font-weight: bold; color: #ff0000;">{{card.card_type}}</span>
+        <span ng-show="card.card_type == 'grade'" style="font-weight: bold; color: #00ff00;">{{card.card_type}}</span>
+        <span ng-show="card.card_type == 'discussion'" style="font-weight: bold; color: #0000ff;">{{card.card_type}}</span>
+	      card to
+	      <span style="font-weight: bold; color: #f48a3d;">{{card.section.course_name}} Section</span>
+	      <span class="pull-right" style="color: #7d818b;">{{card.pub_date | date: "MM/dd/yyyy h:mma"}}</span>
+	    </div>
+	    <div class="title">Title : {{card.title}}</div></br>
+	    {{card.content}}
+	    <span class="more pull-right">
+      	      <a href="#/cards/{{card._id}}" style="font-size: 13px;">MORE></a>
+	    </span>
+	  </p>
         </div>
       </div>
     </div>
-</form>
-</div>
-</div>
-<div class="col-md-6">
-<div class="page-header">
-  <h1 style="margin-top:60px;">WelCome</h1>
-</div>
-<hr>
-<h2> - Cards - </h2>
-<div ng-repeat="card in cards" style="margin-top:20px;">
-  <div class = "panel panel-info">
-   <div class = "panel-heading">
-    <h3>
-     {{card.title}}
-    </h3>
-   </div>
-   <div class = "panel-body">
-   <p>
-    {{card.content}}
-   </p>
+    <hr>
   </div>
- </div>
-  <span>
-    <a href="#/cards/{{card._id}}">Comments</a>
-  </span>
-</div>
-<form ng-submit="addCards()" style="margin-top:30px;">
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cardModal">+</button>
-  <div class="modal fade" id="cardModal" role="dialog">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Add a new card</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-    <label for="typeSelect">Type : </label><br>
-    <select name="typeSelect" ng-model="card_type">
-      <option value="announcement">announcement</option>
-      <option value="assignment">assignment</option>
-      <option value="grade">grade</option>
-      <option value="discussion">discussion</option>
-    </select><br>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Card Title" ng-model="card_title"></input>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Card Content" ng-model="card_content"></input>
-  </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Add</button>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+  <div class="col-md-2">      
+  <div ng-hide="myCheck">
+    <div ng-app="ngAnimate" class="bg-grey" style = "top: 60px; position: fixed;">
+      <div style="background-color: #373c4b; padding: 12px;">
+      <a style=" color: #ffffff;">TODO</a>
       </div>
+      <div ng-repeat="todo in todos" style="padding-left: 20px; padding-top:1px; padding-bottom: 1px;">
+	<h4>
+	  <span ng-hide="todo.done" class="glyphicon glyphicon-unchecked" ng-click="finishTask(todo)"></span>
+	  <span ng-show="todo.done" class="glyphicon glyphicon-ok" ng-click="undoTask(todo)"></span>
+	  {{ todo.task }}
+	</h4>
+      </div>
+      <form ng-submit="addTodo()" class="form-inline" style="margin-top:30px; padding-left: 10px; padding-right: 10px;">
+	<input type="text" class="form-control" placeholder="Todo" ng-model="todo_task" size="25"></input>
+	<button type="submit" class="w3-btn w3-padding w3-green">Add</button>
+      </form>
+      <table>
+      <tr>
+      <span style=" color: black; padding-left: 10px; padding-bottom: 10px; text-align: right;">Hide <input type="checkbox" ng-model="myCheck" style="align: right;"></span>
+      </tr>
+      </table>
+    </div>
+    </div>
+    <div ng-show="myCheck">
+     <span style=" color: black; padding-left: 10px; padding-bottom: 10px;">Show <input type="checkbox" ng-model="myCheck"></span>
     </div>
   </div>
-</form>
-<hr>
 </div>
-<div class="col-md-2">
-<div class="alert alert-info" style = "top: 100px; position: fixed;">
-<h2>- Todo -</h2>
-<div ng-repeat="todo in todos | orderBy:'done'" style="margin-top:20px;">
-  <h4>
-    <span ng-hide="todo.done" class="glyphicon glyphicon-unchecked" ng-click="finishTask(todo)"></span>
-    <span ng-show="todo.done" class="glyphicon glyphicon-ok" ng-click="undoTask(todo)"></span>
-    {{ todo.task }}
-  </h4>
-</div>
-<form ng-submit="addTodo()" style="margin-top:30px;">
-  <h3>Add a new Todo</h3>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Todo" ng-model="todo_task"></input>
-  </div>
-  <button type="submit" class="btn btn-primary">Add</button>
-</form>
-</div>
-</div>
-</div>
-<!-- </script> -->
