--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -1,24 +1,22 @@
-<!-- <script type="text/ng-template" id="/register.html"> -->
-<div class="col-md-6 col-md-offset-3">
-<div class="page-header" style="margin-top:60px;">
-  <h1>CleanNote</h1>
-</div>
-<div ng-show="error" class="alert alert-danger row">
-  <span>{{ error.message }}</span>
-</div>
-<form ng-submit="register()"
-      style="margin-top:30px;">
-  <h3>Register</h3>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
+<div class="col-md-4 col-md-offset-4">
+  <div class="page-header" style="margin-top:60px;">
+    <h1><img src="images/logo.png" style="width:50px; height:50px; margin-top: -10px; display: inline-block"> CleanNote</h1>
   </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Username" ng-model="user.username"></input>
+  <div ng-show="error" class="alert alert-danger row">
+    <span>{{ error.message }}</span>
   </div>
-  <div class="form-group">
-    <input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
-  </div>
-  <button type="submit" class="btn btn-primary">Register</button>
-</form>
+  <form ng-submit="register()"
+	style="margin-top:30px;">
+    <h3>Register</h3>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="User ID" ng-model="user.user_id"></input>
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Username" ng-model="user.username"></input>
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
+    </div>
+    <button type="submit" class="btn btn-block btn-green pull-right">Register</button>
+  </form>
 </div>
-<!-- </script> -->
