--- a/client/partials/cards.html
+++ b/client/partials/cards.html
@@ -2,7 +2,7 @@
 <div class="row">
 <div class="col-md-6 col-md-offset-3">
 <div class="page-header">
-<div class="panel panel-success" style="margin-top:80px;">
+<div class="panel panel-info" style="margin-top:80px;">
       <div class="panel-heading">
     <h3>
      {{card.title}}
