Add Card Button Auth Setting

--- a/client/partials/cards.html
+++ b/client/partials/cards.html
@@ -31,7 +31,7 @@
      ng-model="body"></input>
      </td>
      <td>
-     <button type="submit" class="btn btn-green">Post</button>
+     <button type="submit" class="btn btn-success">Post</button>
      </td>
      </tr>
      </table>
