--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -14,7 +14,7 @@
       <div class="form-group">
 	<input type="password" class="form-control" placeholder="Password" ng-model="user.password"></input>
       </div>
-      <button type="submit" class="btn btn-block btn-green pull-right">Log In</button>
+      <button type="submit" class="btn btn-block btn-success pull-right">Log In</button>
 
     </form>
   </div>
