--- a/client/partials/sections.html
+++ b/client/partials/sections.html
@@ -11,7 +11,7 @@
     </div>
     <br>
     </div>
-    <button class="btn btn-green" ng-click="selectStudents()" align="center" style="margin:10px">
+    <button class="btn btn-success" ng-click="selectStudents()" align="center" style="margin:10px">
       Add Student
     </button>
     </div>
@@ -25,7 +25,7 @@
     </div>
     <br>
     </div>
-    <button class="btn btn-green" ng-click="selectInstructors()" style="margin:10px">
+    <button class="btn btn-success" ng-click="selectInstructors()" style="margin:10px">
       Add Instructor
     </button>
     </div>
@@ -39,7 +39,7 @@
     </div>
     <br>
     </div>
-    <button class="btn btn-green" ng-click="selectManagers()" style="margin:10px">
+    <button class="btn btn-success" ng-click="selectManagers()" style="margin:10px">
       Add Manager
     </button>
     </div>
