--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -31,7 +31,7 @@
   </div>
   <div class="bg-grey col-md-6">
     <div style="padding: 4px;">
-      <h4>TIMELINE<button type="button" class="btn btn-default btn-md pull-right" ng-click="showAddCardModal()">+ Add Card</button></h4>
+      <h4>TIMELINE : {{ selectedSection.course_name }} <button type="button" class="btn btn-default btn-md pull-right" ng-click="showAddCardModal()" ng-show="edit_auth">+ Add Card</button></h4>
     </div>
     <div class="card" ng-repeat="card in cards" style="margin-top:20px;">
       <div class="panel panel-normal">
