--- a/client/css/main.css
+++ b/client/css/main.css
@@ -69,6 +69,15 @@ body {
     font-size: 16px;
 }
 
+.card-detail .panel-body {
+    font-size: 22px;
+}
+
+.card-detail .panel-body .title {
+    font-weight: bold;
+    font-size: 18px;
+}
+
 /* .card .panel-body .create-info { */
 
 /* } */
