--- a/client/partials/cards.html
+++ b/client/partials/cards.html
@@ -1,49 +1,31 @@
-<!-- <script type="text/ng-template" id="/cards.html"> -->
-<div class="row">
-<div class="col-md-6 col-md-offset-3">
-<div class="page-header">
-<div class="panel panel-success" style="margin-top:80px;">
-      <div class="panel-heading">
-    <h3>
-     {{card.title}}
-    </h3>
-    <table>
-    <td style="color:#3c763d">
-    {{card.section.course_name}}-{{card.card_type}}
-    </td>
-    <td>
-    <div style="text-align:right; color:#3c763d">
-    {{card.pub_date | date: "MM/dd/yyyy h:mma"}}</div>
-    </td>
-    </table>
+<div class="row card-detail">
+  <div class="col-md-6 col-md-offset-3 bg-grey">
+    <div class="panel panel-normal" style="margin-top: 13px;">
+      <div class="panel-body">
+	<p>
+	  <div style="font-size: 13px;">
+	    <span style="font-weight: bold;">{{card.creator.username}}</span>
+	    created
+	    <span ng-show="card.card_type == 'announcement'" style="font-weight: bold; color: #245894;">{{card.card_type}}</span>
+            <span ng-show="card.card_type == 'assignment'" style="font-weight: bold; color: #e93409;">{{card.card_type}}</span>
+            <span ng-show="card.card_type == 'grade'" style="font-weight: bold; color: #23ac02;">{{card.card_type}}</span>
+            <span ng-show="card.card_type == 'discussion'" style="font-weight: bold; color: #0000ff;">{{card.card_type}}</span>
+	    card to
+	    <span style="font-weight: bold; color: #f48a3d;">{{card.section.course_name}} Section</span>
+	    <span class="pull-right" style="color: #7d818b;">{{card.pub_date | date: "MM/dd/yyyy h:mma"}}</span>
+	  </div>
+	  <div class="title">Title : {{card.title}}</div></br>
+	  {{card.content}}
+	</p>
+      </div>
     </div>
-    <div class="panel-body">
-    <p style="font-size:20px; padding=5px;">{{card.content}}</p>
-<div style="background-color:#EEEEEE">
-<form ng-submit="addComment()" style="margin-top:30px; padding: 10px 10px 10px 10px">
-  <div class="form-group">
-  <table style="width:100%">
-  <tr>
-  <td>
-    <input type="text"
-     class="form-control"
-     placeholder="Comment"
-     ng-model="body"></input>
-     </td>
-     <td>
-     <button type="submit" class="btn btn-success">Post</button>
-     </td>
-     </tr>
-     </table>
+    <form ng-submit="addComment()" class="form-inline" style="margin-top:30px; padding-left: 10px; padding-right: 10px;">
+      <input type="text" class="form-control" placeholder="Type comment..." ng-model="body" style="width: 90%;"></input>
+      <button type="submit" class="btn btn-success btn-md">Add</button>
+    </form>
+    <div ng-repeat="comment in card.comments" style="padding-left: 20px; padding-bottom: 10px;">
+      <span style="color:#3BA944; font-weight:bold"> {{comment.author}}</span>
+      <span style="font-size:15px; margin-left:10px;">{{comment.body}}</span>
+    </div>
   </div>
-      <div ng-repeat="comment in card.comments">
-  <span style="color:#3BA944; font-weight:bold"> {{comment.author}}</span>
-  <span style="font-family:굴림;font-size:15px; margin-left:10px;">{{comment.body}}</spsan>
 </div>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- </script> -->
