implemented chatting room

--- a/client/partials/addCardModal.html
+++ b/client/partials/addCardModal.html
@@ -16,7 +16,8 @@
     <input type="text" class="form-control" placeholder="Card Title" ng-model="card_title"></input>
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Card Content" ng-model="card_content"></input>
+    <!-- <input type="text" class="form-control" placeholder="Card Content" ng-model="card_content"></input> -->
+    <textarea rows="5" class="form-control" placeholder="Card Content" ng-model="card_content"></textarea>
   </div>
 </div>
 <div class="modal-footer">
