--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 .modal-body .select-list {
@@ -78,6 +78,39 @@ body {
     font-size: 18px;
 }
 
-/* .card .panel-body .create-info { */
+.chat .message-line {
+    background: #ddd;
+    padding: 3px;
+    position: fixed;
+    bottom: 0;
+    width: 48%;
+}
 
-/* } */
+.chat .message-line input {
+    border: 0;
+    padding: 10px;
+    width: 90%;
+    margin-right: .5%;
+}
+
+.chat .message-line button {
+    width: 9%;
+    background: #11a072;
+    border: none;
+    padding: 10px;
+    color: #ffffff;
+}
+
+#chatBox {
+    overflow : auto;
+    width : 100%;
+    height : 500px;
+    padding: 10px 10px 10px 10px;
+}
+.chatMessage {
+    padding: 10px 30px;
+    background: #ffffff;
+    border-radius: 25px;
+    text-align: left;
+    margin-bottom: 8px;
+}
